@@ -92,6 +92,11 @@ zbx_graph_item_type;
 #define TRIGGER_EXPRESSION_LEN_MAX	TRIGGER_EXPRESSION_LEN+1
 #define TRIGGER_ERROR_LEN		128
 #define TRIGGER_ERROR_LEN_MAX		TRIGGER_ERROR_LEN+1
+#if defined(HAVE_IBM_DB2) || defined(HAVE_ORACLE)
+#	define TRIGGER_COMMENTS_LEN	2048
+#else
+#	define TRIGGER_COMMENTS_LEN	65535
+#endif
 
 #define HOST_HOST_LEN			MAX_ZBX_HOSTNAME_LEN
 #define HOST_HOST_LEN_MAX		HOST_HOST_LEN+1
@@ -142,7 +147,13 @@ zbx_graph_item_type;
 #define ITEM_PUBLICKEY_LEN_MAX		ITEM_PUBLICKEY_LEN+1
 #define ITEM_PRIVATEKEY_LEN		64
 #define ITEM_PRIVATEKEY_LEN_MAX		ITEM_PRIVATEKEY_LEN+1
-#define ITEM_PARAM_LEN			65535
+#if defined(HAVE_IBM_DB2) || defined(HAVE_ORACLE)
+#	define ITEM_PARAM_LEN		2048
+#	define ITEM_DESCRIPTION_LEN	2048
+#else
+#	define ITEM_PARAM_LEN		65535
+#	define ITEM_DESCRIPTION_LEN	65535
+#endif
 
 #define FUNCTION_FUNCTION_LEN		12
 #define FUNCTION_FUNCTION_LEN_MAX	FUNCTION_FUNCTION_LEN+1
